Converted to vuetify implemented menu needed styling

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
-    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.2",
-    "vuelidate": "^0.7.6",
+    "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -29,8 +29,11 @@
     "eslint-plugin-vue": "^6.2.2",
     "jest-transform-stub": "^2.0.0",
     "node-sass": "^6.0.1",
+    "sass": "~1.32.0",
     "sass-loader": "10",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
@@ -56,9 +59,6 @@
         }
       }
     ]
-  },
-  "jest": {
-    "verbose": true
   },
   "browserslist": [
     "> 1%",
